﻿The idea is to record here changes that deserve mentioning in
the release notes, as we make them, to make the release process easier.

Next version:

2.6 (????-??-??)

* support table of contents and links in ebook UI
* swapped keybindings:
  * F11 : Fullscreen mode (still also Ctrl+Shift+L)
  * F5  : Presentation mode (also Shift+F11, still also Ctrl+L)
* deprecated the browser plugin (remains installed if used)
* support LZMA in Comic Book (CBZ) files
* allow saving Comic Book files as PDF
* new advanced settings: UseTabs (to be exposed eventually), ShowSingleTab, FullPathInTitle

2.5.2 (2014-05-13)

* use less memory for comic book files
* PDF rendering improvements

2.5.1 (2014-05-07):

* hopefully fix frequent ebook crashes

2.5 (2014-05-05):

* 2 page view for ebooks
* new keybindings:
  * Ctrl+PgDn, Ctrl+Right : go to next page
  * Ctrl+PgUp, Ctrl+Left  : go to previous page
* 10x faster ebook layout
* support JP2 images
* new advanced settings: ShowMenuBar, ReloadModifiedDocuments, CustomScreenDPI
* left/right clicking no longer changes pages in fullscreen mode
  (use Presentation mode if you rely on this feature)
* fixed multiple crashes

2.4 (2013-10-01):

* full-screen mode for ebooks (Ctrl-L)
* new key bindings:
  * F9 - show/hide menu (not remembered after quitting)
  * F8 - show/hide toolbar
* support WebP images
* support for RAR5 compressed comic books
* fixed multiple crashes

2.3.2 (2013-05-25):

* fix a bug changing a language using Settings/Change Language menu

2.3.1 (2013-05-23):

* not compiled with SSE2

2.3 (2013-05-22):

* more configurability. Settings are now saved in human-editable
  SumatraPDF-settings.txt (instead of binary sumatrapdfprefs.dat)
  and there are more settings for customizing Sumatra. For more
  documentation see http://blog.kowalczyk.info/software/sumatrapdf/settings.html
* "Go To Page" for ebook format
* add support for OpenXPS documents
* add View/Manga Mode menu item for Comic Book (CBZ/CBR) files